Fix JMH errors, error handling and more